# Varak

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt  premake5.lua  yacpm.json
targets/varak_app/: CMakeLists.txt  varak_app.h  varak_entry_point.h
targets/varak_app/src/: application.cpp  application.h  input.cpp  layer_stack.cpp  layer_stack.h  window.cpp  window.h
targets/varak_core/: CMakeLists.txt  varak_core.h
targets/varak_core/src/: assert.h  core.h  instrumentor.h  log.cpp  log.h  vrpch.h
targets/varak_ecs/: CMakeLists.txt
targets/varak_ecs/src/: entity.h  scene.cpp
targets/varak_ecs/src/components/: camera_component.cpp  camera_component.h  component.h  sprite_renderer_component.cpp  sprite_renderer_component.h
targets/varak_editor/: CMakeLists.txt
targets/varak_editor/src/: editor_layer.cpp  editor_layer.h  varak_editor_app.cpp
targets/varak_editor/src/panels/: scene_hierarchy_panel.cpp  scene_hierarchy_panel.h
targets/varak_editor/src/panels/inspector_panel/: inspector_panel.h  inspector_panel_entity.cpp
targets/varak_imgui/: CMakeLists.txt
targets/varak_imgui/src/: imgui_helper.cpp  imgui_helper.h  imgui_layer.cpp  imgui_layer.h
targets/varak_renderer/: CMakeLists.txt
targets/varak_renderer/src/: buffer.cpp  buffer.h  frame_buffer.cpp  frame_buffer.h  render_command.h  renderer.cpp  renderer.h  renderer2d.cpp  renderer2d.h  renderer_api.cpp  renderer_api.h  rendering_context.cpp  rendering_context.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h
targets/varak_renderer/src/opengl/: opengl_buffer.cpp  opengl_buffer.h  opengl_context.cpp  opengl_frame_buffer.cpp  opengl_frame_buffer.h  opengl_renderer_api.cpp  opengl_renderer_api.h  opengl_shader.h  opengl_texture.cpp  opengl_texture.h  opengl_vertex_array.cpp  opengl_vertex_array.h
targets/varak_scene/: CMakeLists.txt
targets/varak_scene/src/: entity.h  scene.cpp  scene.h  scene_serializer.h
targets/varak_scene/src/components/: camera_component.cpp  camera_component.h  component.h  sprite_renderer_component.cpp  sprite_renderer_component.h  transform_component.cpp  transform_component.h
varak/: CMakeLists.txt  premake5.lua
varak/include/varak/: entry_point.h  pch.h
varak/include/varak/app/: application.h  input.h  layer.h  layer_stack.h  window.h
varak/include/varak/core/: assert.h  core.h  log.h
varak/include/varak/ecs/: editor_camera.h  entity.h  scene.h
varak/include/varak/ecs/components/: camera_component.h  (+3 more)
varak/include/varak/event/: event.h  key_event.h  mouse_codes.h  mouse_event.h  window_event.h
varak/include/varak/imgui/: imgui_layer.h
varak/include/varak/renderer/: buffer.h  frame_buffer.h  render_command.h  renderer.h  renderer2d.h  renderer_api.h  rendering_context.h  shader.h  texture.h  vertex_array.h
varak/src/: varak.h  vrpch.cpp  vrpch.h
varak/src/app/: application.cpp  input.cpp  layer_stack.cpp  window.cpp
varak/src/core/: log.cpp
varak/src/ecs/: editor_camera.cpp  scene.cpp
varak/src/ecs/components/: camera_component.cpp  sprite_renderer_component.cpp  transform_component.cpp
varak/src/imgui/: imgui_helper.cpp  imgui_layer.cpp
varak/src/math/: camera.cpp
varak/src/platform/opengl/: imgui_opengl_renderer.cpp  opengl_buffer.cpp  opengl_buffer.h  opengl_frame_buffer.cpp  opengl_frame_buffer.h  opengl_framebuffer.cpp  opengl_framebuffer.h  opengl_graphics_context.cpp  opengl_graphics_context.h  opengl_renderer_api.cpp  opengl_renderer_api.h  opengl_rendering_context.cpp  opengl_rendering_context.h  opengl_shader.cpp  opengl_shader.h  opengl_texture.cpp  opengl_texture.h  opengl_vertex_array.cpp  opengl_vertex_array.h
varak/src/platform/windows/: windows_input.cpp  windows_window.cpp  windows_window.h
varak/src/renderer/: buffer.cpp  frame_buffer.cpp  renderer.cpp  renderer2d.cpp  renderer_api.cpp  rendering_context.cpp  shader.cpp  texture.cpp  vertex_array.cpp
varak/src/renderer/opengl/: opengl_buffer.h  opengl_context.h  opengl_frame_buffer.h  opengl_renderer_api.cpp  opengl_renderer_api.h  opengl_shader.cpp  opengl_shader.h  opengl_texture.cpp  opengl_texture.h  opengl_vertex_array.h
varak/src/varak/: test.cpp  varak.h
varak/src/varak/core/: application.cpp  application.h  assert.h  base.h  entry_point.h  input.h  key_codes.h  layer.h  layer_stack.cpp  layer_stack.h  log.cpp  log.h  mouse_codes.h  platform_detection.h  timestep.h  window.cpp  window.h
varak/src/varak/debug/: instrumentor.h
varak/src/varak/events/: event.h  key_event.h  mouse_event.h  window_event.h
varak/src/varak/imgui/: imgui_build.cpp  imgui_helper.cpp  imgui_helper.h  imgui_layer.cpp  imgui_layer.h
varak/src/varak/renderer/: buffer.cpp  buffer.h  camera.cpp  camera.h  camera_controller.cpp  camera_controller.h  editor_camera.cpp  editor_camera.h  frame_buffer.cpp  frame_buffer.h  framebuffer.cpp  framebuffer.h  graphics_context.cpp  graphics_context.h  orthographic_camera.cpp  orthographic_camera.h  orthographic_camera_controller.cpp  orthographic_camera_controller.h  render_command.cpp  render_command.h  renderer.cpp  renderer.h  renderer2d.cpp  renderer2d.h  renderer_api.cpp  renderer_api.h  rendering_context.cpp  rendering_context.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h
varak/src/varak/scene/: components.h  entity.cpp  entity.h  scene.cpp  scene.h
varak_app/: CMakeLists.txt  varak_app.h
varak_app/src/: application.cpp  application.h  input.h  layer.h  timestep.h
varak_core/: CMakeLists.txt
varak_core/src/: core.h  instrumentor.h  log.h  vrpch.h
varak_imgui/: CMakeLists.txt  varak_imgui.h
varak_imgui/src/: imgui_helper.cpp  imgui_helper.h  imgui_layer.cpp
varak_scene/: CMakeLists.txt  varak_scene.h
varak_scene/src/: components.h  editor_camera.cpp  editor_camera.h  entity.cpp  entity.h  scene.cpp  scene.h
varak_scene/src/components/: camera_component.h  component.h  sprite_renderer_component.h  transform_component.cpp  transform_component.h
varak_window/: CMakeLists.txt
varak_window/src/: window.cpp  window.h
(+182 files in other folders)
